Relatively position image-wrapper to keep after element correctly positioned on smaller screens

--- a/styles/Projects.module.scss
+++ b/styles/Projects.module.scss
@@ -25,6 +25,7 @@
         }
 
         .image-wrapper {
+            position: relative;
 
             &::after {
                 content: '';
